--- a/projects/ngx-aus-design-system/package.json
+++ b/projects/ngx-aus-design-system/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "ngx-aus-design-system",
-  "version": "1.0.1",
+  "name": "@projekt202/ngx-aus-design-system",
+  "version": "0.0.0",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "peerDependencies": {
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular/animations": "^14.0.0",
