--- a/projects/ngx-aus-design-system/package.json
+++ b/projects/ngx-aus-design-system/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@projekt202/ngx-aus-design-system",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://npm.pkg.github.com/",
+    "@projekt202:registry": "https://npm.pkg.github.com/"
   },
   "peerDependencies": {
     "@angular-devkit/build-angular": "^14.0.5",
