--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/google-maps": "^14.1.3",
+    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@angular/google-maps": "^14.1.3",
     "@angular/youtube-player": "^14.2.0",
     "@apollo/client": "^3.6.9",
     "@boatzako/ngx-smooth-scroll": "^2.2.0",
     "@ng-select/ng-select": "^9.0.2",
     "@ngneat/helipopper": "^5.1.4",
     "@ngneat/overview": "^3.0.4",
-    "iotacss": "^1.6.0",
-    "graphql": "^16.6.0",
-    "gsap": "^3.11.4",
-    "html-entities": "^2.3.3",
-    "intersection-observer": "^0.12.2",
-    "dayjs": "^1.11.4",
     "angular-content-portal": "^9.0.3",
     "angular-google-tag-manager": "^1.7.0",
     "angular2-collapsible": "^0.8.0",
     "aos": "^2.3.4",
     "apollo-angular": "^4.0.1",
-    "split-type": "^0.3.3",
+    "dayjs": "^1.11.4",
+    "graphql": "^16.6.0",
+    "gsap": "^3.11.4",
+    "html-entities": "^2.3.3",
+    "intersection-observer": "^0.12.2",
+    "iotacss": "^1.6.0",
     "ng-in-viewport": "^13.0.1",
     "ng-lazyload-image": "^9.1.3",
     "ng-recaptcha": "^10.0.0",
@@ -54,14 +54,13 @@
     "ngx-parallax-scroll": "^1.0.2",
     "ngx-skeleton-loader": "^6.0.0",
     "ngx-smart-modal": "^7.4.1",
-    "swiper": "~8.1.0",
     "rxjs": "~7.5.0",
+    "split-type": "^0.3.3",
+    "swiper": "~8.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4",
-    "@types/gsap": "^3.0.0",
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
@@ -76,6 +75,8 @@
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@types/aos": "^3.0.4",
+    "@types/gsap": "^3.0.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
