--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ng-select/ng-select": "^9.0.2",
     "@ngneat/helipopper": "^5.1.4",
     "@ngneat/overview": "^3.0.4",
+    "@ngx-formly/core": "^6.1.3",
     "angular-content-portal": "^9.0.3",
     "angular-google-tag-manager": "^1.7.0",
     "angular2-collapsible": "^0.8.0",
